# nnue-jsontobin

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: cli.rs  convert.rs  main.rs
validation/net0030/: viri0030.json
