[package]
name = "nnue-jsontobin"
version = "2.0.0"
edition = "2021"
description = "Converts marlinflow JSON networks into binary format, for use in chess engines."
authors = ["Cosmo Bobak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
panic = "abort"
